# orehome

./: Cargo.toml  LICENSE  build.rs
assets/css/orehome/: search.css
assets/js/: search.js
src/: config.rs  handlers.rs  main.rs  verbose.rs
src/views/: list.rs  mod.rs  route.rs  search.rs
templates/: search.html
