[package]
name = "orehome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.8", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
actix-files = "0.6.2"
actix-web = "4.2.1"
tera = "1.17.1"

